--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
+    "angular": "1.7.2",
     "chart.js": "^2.7.1",
     "cordova-android": "6.3.0",
     "cordova-plugin-device": "^1.1.4",
