--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular": "1.7.2",
     "chart.js": "^2.7.1",
     "cordova-android": "6.3.0",
+    "cordova-browser": "5.0.3",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^4.0.3",
@@ -54,7 +55,8 @@
       "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
