--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/geolocation": "^4.9.0",
     "@ionic-native/printer": "^4.9.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
@@ -30,6 +31,7 @@
     "cordova-android": "6.3.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-printer": "git+https://github.com/katzer/cordova-plugin-printer.git",
     "cordova-plugin-splashscreen": "^4.0.3",
@@ -55,7 +57,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-printer": {}
+      "cordova-plugin-printer": {},
+      "cordova-plugin-geolocation": {}
     },
     "platforms": [
       "android",
